     fetching the row in the parent table, DBIx classes generated with
     an option to drop id_ at the start of the relation name
 - InflateColumn::Serializer component added selectively to autoqc classes
     rather than to all classes
 - mqc models (DBIx) functionality extended to create a method for
   updating/creating outcomes
 - column name fixed in the mqc_outcome_hist table

release 57.3
 - SeqQC: removed pages that are not used any more (studies, samples, libraries,
   people, weekly reports)

release 57.2
 - updated the way bcviz functions are called from SeqQC
 - Added tables for manual qc.

release 57.1

 - d3 bcviz rendering of adapter, insert size and sequence mismatch plots
 - page rearrangement to display ref match and old contamination results side-by-side removed
 - SeqQC templates, client-side scripts and config files installed to a directory
   under the install_base path; if a bcviz path is given, a link to it is created,
   old bcviz link is overwitten in this case
 - removed generation of google chart api urls

release 57.0
 - incorporated SeqQC viewer

release 56.16
 - changed default data source for call_gtck_composite_rpt.pl to combined Sequenom/Fluidigm results

release 56.15
 - if norm_fit test produces no output, e.g. if no peaks after filtering, simply add a comment

release 56.14
 - updates to norm_fit code
     more informative log messages 
     added checks for zero peaks 
     do not run norm_fit test if there is not enough variation in the insert size

release 56.13
 - correct size of genotype_data_set column of genotype table

release 56.12
 - insert_size.norm_fit_confidence from integer to float

release 56.11
 - changes to genoype check and utils to use combined Sequenom
    and Fluidigm results for the 26 QC SNPS (W30467)
-  fixed RE when parsing norm_fit output
-  fixed a bug and cleaned up norm_fit code

release 56.10
 - support for search for autoqc objects without tag_index attrubute