@@ -1,9 +1,10 @@
-[% npg_url = 'http://npg.';
-   lims_api_url = 'http://psd-support.internal.sanger.ac.uk:6600';
+[% npg_url = 'http://sfweb.internal.sanger.ac.uk:';
+   lims_url = 'http://psd-support.internal.sanger.ac.uk:6600';
    IF env_dev == 'dev';
-     lims_api_url = 'http://dev.psd.sanger.ac.uk:6610';
-     npg_url = npg_url _ 'dev.';
+     lims_url = 'http://dev.psd.sanger.ac.uk:6610';
+     npg_url = npg_url _ '9010';
+   ELSE;
+     npg_url = npg_url _ '9000';
    END;
-   lims_url = lims_api_url;
-   npg_url = npg_url _ 'sanger.ac.uk/perl/npg';
+   npg_url = npg_url _ '/perl/npg';
 %]
